--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -4,9 +4,11 @@
 // Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
+$ska-green: #174C4F
+$ska-green-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $ska-green
+$primary-invert: $ska-green-invert
 $body-color: #333
 $black: #2b2523
 
