--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,6 +2,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
+// prev btn color: #CC3700
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
 $ska-green: #174C4F
@@ -63,9 +64,9 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #008B8B
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
+    -webkit-box-shadow: inset 0 0 0 2px #008B8B
     box-shadow: inset 0 0 0 2px #f40
     -webkit-transition: all .15s ease
     transition: all .15s ease
