--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -64,10 +64,10 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #008B8B
+    color: #2b2523
     text-align: center
     -webkit-box-shadow: inset 0 0 0 2px #008B8B
-    box-shadow: inset 0 0 0 2px #f40
+    box-shadow: inset 0 0 0 2px #008B8B
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -117,7 +117,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033
+  background-color: #E0FFFF
 .blog-list-item header
   display: flex
   margin-bottom: 1em
