--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -117,7 +117,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #780090
+  background-color: #D3D3D3
 .blog-list-item header
   display: flex
   margin-bottom: 1em
